--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
         "start": "next start"
     },
     "dependencies": {
+        "gray-matter": "^4.0.2",
         "next": "9.1.4",
         "react": "16.12.0",
-        "react-dom": "16.12.0"
+        "react-dom": "16.12.0",
+        "react-markdown": "^4.2.2"
     },
     "devDependencies": {
+        "@types/next": "^9.0.0",
         "@types/node": "^12.12.11",
         "@types/react": "^16.9.11",
         "prettier": "^1.19.1",
