--- a/package.json
+++ b/package.json
@@ -3,18 +3,23 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
+        "export": "next build && next export",
         "dev": "next dev",
         "build": "next build",
         "start": "next start"
     },
     "dependencies": {
+        "@material-ui/core": "^4.6.1",
+        "@material-ui/icons": "^4.5.1",
         "gray-matter": "^4.0.2",
+        "js-yaml": "^3.13.1",
         "next": "9.1.4",
         "react": "16.12.0",
         "react-dom": "16.12.0",
         "react-markdown": "^4.2.2"
     },
     "devDependencies": {
+        "@types/js-yaml": "^3.12.1",
         "@types/next": "^9.0.0",
         "@types/node": "^12.12.11",
         "@types/react": "^16.9.11",
