--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "react-markdown": "^4.2.2"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
+        "@babel/plugin-proposal-optional-chaining": "^7.6.0",
         "@types/js-yaml": "^3.12.1",
         "@types/next": "^9.0.0",
         "@types/node": "^12.12.11",
