--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,21 @@
 {
-    "typescript.tsdk": "node_modules/typescript/lib"
+    "typescript.tsdk": "node_modules/typescript/lib",
+    "workbench.colorCustomizations": {
+        "activityBar.activeBackground": "#b37884",
+        "activityBar.activeBorder": "#b5d1ad",
+        "activityBar.background": "#b37884",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#b5d1ad",
+        "activityBarBadge.foreground": "#15202b",
+        "statusBar.background": "#9f5967",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#b37884",
+        "titleBar.activeBackground": "#9f5967",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#9f596799",
+        "titleBar.inactiveForeground": "#e7e7e799"
+    },
+    "peacock.color": "#41e18f",
+    "peacock.remoteColor": "#9f5967"
 }
